<resources>
    <string name="app_name">Xames</string>
    <string name="bachet_title">Bachet Game</string>
    <string name="dudeney_title">Dudeney Game</string>
    <string name="even_mania_title">Even Mania Game</string>
    <string name="player1_wins">Player 1 wins!</string>
    <string name="player2_wins">Player 2 wins!</string>
    <string name="we_have_winner">We have a winner!</string>
    <string name="logic_wall">Wall Of Logic</string>
    <string name="go">Go!</string>
    <string name="one_player">1 Player</string>
    <string name="two_players">2 Players</string>
    <string name="game_over">Game Over!</string>
    <string name="okay">Back</string>
    <string name="win_message">Current Red player is the winner!
                                Congratulations Red!</string>

    <string name="BachetInfo">"Bachet game is named after a french mathematician, poet and translator - Claude Gaspard Bachet de Méziriac (1581 - 1638).
        This game is played mainly by two players.
        A player looses when on his turn the score becomes 0."</string>

    <string name="DudeneyInfo">
        Dudeney game is named after an english mathematician - Henry Dudeney (1857 – 1930).
        The game is played mainly by two players. A player looses when on his turn the score becomes more than 37.
        And a player wins when on his turn the score becomes exactly 37.
    </string>
    <string name="coming_soon">More games coming soon...</string>
</resources>
