<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.theerrors.xames.BasheMenuActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:src="@mipmap/ic_keyboard_arrow_left_black" />

    <Button
        android:id="@+id/btn_one_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_two_players"
        android:layout_alignRight="@+id/btn_two_players"

        android:layout_below="@+id/btn_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/one_player"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_two_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_one_player"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/two_players"
        android:textColor="@color/white"
        android:textSize="26dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_two_players">

        <TextView
            android:id="@+id/tv_game_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_two_players"
            android:layout_marginTop="24dp"
            android:paddingLeft="16dp"
            android:text="@string/BachetInfo"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:visibility="invisible" />

    </ScrollView>


</RelativeLayout>
