<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/logic_wall"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- pair of the first two games-->
            <LinearLayout
                android:id="@+id/pairOne_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Bashe Game image and name label-->
                <LinearLayout
                    android:id="@+id/gameOne_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_game_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:clickable="true"
                        android:minHeight="300dp"
                        android:minWidth="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bachet_game_screenshot"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="cursive"
                        android:text="@string/bachet_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <!--Dudeli game image and name label-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_game_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="68dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:minHeight="300dp"
                        android:minWidth="200dp"
                        android:src="@drawable/dudeney_game_screenshot" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="cursive"
                        android:text="@string/dudeney_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pairTwo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pairOne_layout"
                android:orientation="horizontal">
                <!-- EvenMania Game image and name label-->
                <LinearLayout
                    android:id="@+id/gameThree_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_game_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:clickable="true"
                        android:minHeight="300dp"
                        android:minWidth="200dp"
                        android:src="@drawable/evenmania_game_screenshot"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="cursive"
                        android:text="@string/even_mania_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </LinearLayout>
                <!--Some game image and name label-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_game_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="68dp"
                        android:clickable="true"
                        android:minHeight="300dp"
                        android:minWidth="200dp"
                        android:src="@drawable/coming_soon"/>




                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</LinearLayout>
